Finalizando funcionalidades básicas

--- a/PokeStoreClient/app/index.html
+++ b/PokeStoreClient/app/index.html
@@ -18,6 +18,8 @@
     <script src="core/core.module.js"></script>
     <script src="core/pokemon/pokemon.module.js"></script>
     <script src="core/pokemon/pokemon.service.js"></script>
+    <script src="core/purchase/purchase.module.js"></script>
+    <script src="core/purchase/purchase.service.js"></script>
     <script src="pokemon-list/pokemon-list.module.js"></script>
     <script src="pokemon-list/pokemon-list.component.js"></script>
   </head>
